Fixed some styling to look better on mobile devices and overflow text to eclipse.

--- a/src/app/shared/card-item/card-item.component.scss
+++ b/src/app/shared/card-item/card-item.component.scss
@@ -12,14 +12,15 @@ $image-width: 160px;
 }
 
 .card-title {
-    margin-top: 5px;
-    line-height: 20px;
     font-size: 13px;
+
+    width: 150px;
     text-overflow: ellipsis;
-    white-space: normal;
-    max-width: 150px;
-    height: 52px;
-    padding-top: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    display: block;
+    margin-top: 2px;
+    margin-bottom: 0px;
 }
 
 .card-img-top {
